# artifacts/api-server/src/routes/index.ts
@@ -1,14 +1,18 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import authRouter from "./auth";
 import categoriesRouter from "./categories";
 import productsRouter from "./products";
 import cartRouter from "./cart";
+import ordersRouter from "./orders";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(authRouter);
 router.use(categoriesRouter);
 router.use(productsRouter);
 router.use(cartRouter);
+router.use(ordersRouter);
 
 export default router;
